--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,7 @@ name: scrape
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: "0 */2 * * *"
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -12,11 +12,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: "3.9"
       - name: Install all necessary packages
-        run: pip install requests beautifulsoup4 pandas
+        run: pip install python-jobspy
       - name: Run the scraping script
-        run: python scraper.py
+        run: python job_scraper.py
       - name: Commit and push if content changed
         run: |-
           git config user.name "Automated"
